# cppmaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  contest.cpp  headers.h
.github/workflows/: c-cpp.yml
101/casts/: static_cast.cpp
101/constructDestruct/: virtualDestructor  virtualDestructor.cpp
101/embedded/: keyfeatures.txt  watchdog_timer.cpp
101/general/: about_declr_initial.cpp  about_double.cpp  getting_started.cpp  pass_by_pointer.cpp
101/lambdas/: any_of.cpp
101/move_semantics/: copy_vs_move.cpp  example1.cpp  example2.cpp  lvalue_rvalue.cpp  move_semantics_tech_talk.cpp
101/multithreading/: createThread.cpp  passing_args_to_threads.cpp  threads.cpp
101/oops/: find_the_output.cpp  find_the_output2.cpp  sudents_average_marks.cpp
101/pointers/: copy_vs_move.cpp
101/smartpointers/: 01_memory_in_stack.cpp  04_smart_pointers_begin.cpp  Makefile  shared_pointers.cpp  unique_pointers.cpp
101/strings/: reverse_words_in_string.cpp  string_check_for_substring.cpp  string_check_permutation.cpp  string_find_first_off_occurrence.cpp  string_splicing.cpp  string_split_stringstream.cpp  string_storage.cpp  to_lower.cpp
101/stringsLib/: binary_string_to_int.cpp  string_adjacent_find.cpp  string_count.cpp  string_find_end_occurrence.cpp
101/templates/: example_with_templates.cpp
101/vectors/: copying_in_vector.cpp  creating_vector_from_map.cpp  slice_vector.cpp  vector_count_element.cpp  vector_count_on_condition.cpp  vector_fill_style1.cpp  vector_fill_style_2.cpp  vector_find_element.cpp  vector_find_first_item.cpp  vector_is_equal.cpp  vector_remove_element.cpp  vector_to_set.cpp
algoTemplates/binarySearch/: binary_search_basic.cpp
algoTemplates/dfs/: get_neighbours.cpp
algoTemplates/general/: majority_element.cpp  maximum_subarray_sum.cpp  move_all_nonzero_front.cpp
algoTemplates/slidingWindow/: sliding_window_maximum.cpp  sliding_window_minimum.cpp
algoTemplates/sort/: custom_comparator.cpp
algorithms/arrays/: about_arrays.cpp
algorithms/bfs/: bfs.cpp  levelorder.cpp
algorithms/binarySearch/: LIS.cpp  binarySearch.cpp  binary_search_monotonic.cpp
algorithms/dfs/: counting_rooms_islands.cpp
algorithms/linkedlist/: linkedlists.cpp
algorithms/math/: binary_exponential.cpp  check_prime.cpp  gcd_lcm.cpp  leap_year.cpp  powers.cpp  squareroot.cpp  trigo.cpp
algorithms/slidingWindow/: sliding_window.cpp
cpp_questions/: 1451C-string_equality.cpp  best_time_to_buy_sell_stock_1.cpp  getting_input.cpp  longest_palindromic_substring.cpp  sets.cpp  string_stream_split_comma_string.cpp  two_sum.cpp  two_sum_better_style.cpp  valid_parantheses.cpp
cppfundae/auto/: auto_intro.cpp
cppfundae/casts/: const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp
cppfundae/general/: about_float.cpp  about_quiz1.cpp  about_taking_inputs.cpp  about_taking_inputs2.cpp  about_ternary.cpp  lower_bound.cpp  swap_ranges.cpp
cppfundae/lambdas/: none_of.cpp
cppfundae/literals/: literals.cpp  user_defined_literals.cpp
cppfundae/oops/: about_class_member_functions.cpp  about_classes.cpp  about_constructors.cpp  about_inheritance.cpp  about_polymorphism_virtual_functions.cpp  sizeof_class.cpp
cppfundae/pointers/: about_pointer_to_a_function.cpp  about_pointer_to_pointer.cpp  about_pointers_to_arrays.cpp
cppfundae/strings/: string_splicing.cpp  string_split_stringstream.cpp
cppfundae/templates/: example_generic.cpp  find_max_in_array_using_templates.cpp
cppfundae/types/: enumClassic.cpp  enums.cpp
cppfundae/vectors/: vector_clear.cpp  vector_itertools_accumulate.cpp  vector_next_permutation.cpp  vector_prev_permutation.cpp  vector_replace_element.cpp  vector_search_is_in_this.cpp
datastructures/array/: consecutive_combos.cpp  consecutive_counts.cpp  get_longest_continous_segment.cpp  vector_sorting.cpp
datastructures/binaryTree/: binaryTreeTraversals.cpp  diameter_of_tree.cpp  lca_using_binary_lifting.cpp  levelOrderTraversal.cpp
datastructures/hashmaps/: delete_from_hashmap.cpp  merge_two_hashmap.cpp  sort_hashmap_by_value.cpp  sort_unordered_map.cpp  unordered_map.cpp
datastructures/heap/: max_heap.cpp  min_heap_example.cpp
datastructures/linkedList/: linkedlist  linkedlist.cpp  linkedlist2.cpp
datastructures/linkedlist/: linkedlist.cpp
datastructures/orderedSet/: orderedSet  orderedSet.cpp
datastructures/priority_queue/: Makefile  priorityQueue.cpp
datastructures/rangeQuery/: prefix_sum.cpp  segment_tree.cpp  segment_tree_with_offset.cpp
datastructures/tree/: binaryTreeTraversals.cpp
datastructures/trie/: trie  trie.cpp
datastructures/vectors/: consecutive_combos.cpp
embedded/: uniformInitialization.cpp  uniformInitialize2.cpp
graphs/: basic_graph_representation.cpp  bfs.cpp  count_connected_components.cpp  dfs.cpp  djikstra.cpp  djikstra_cleaner.cpp  djikstra_new.cpp  euler_tour_check_generate.cpp  find_connected_components.cpp  graph_representation.cpp  heilholzer.cpp  postOrderTraversalGraph.cpp  topological_sort_dfs.cpp  topological_sort_khan.cpp
lib/algorithmsLib/: debug.h
math/: Makefile  binary_exponential.cpp  check_prime.cpp  closest_square_root.cpp  fibonacci.cpp  gcd_lcm.cpp  generate_powers_of_two.cpp  get_factors.cpp  get_neighbours2D.cpp  get_nth_fibonacci.cpp  is_prime_number.cpp  leap_year.cpp  odd_even.cpp  powers.cpp  reverse_all_bits_in_a_number.cpp  reverse_bits_in_a_number.cpp  transpose.cpp  transpose_of_matrix.cpp
quickprints/: 2Dmatrix_display.cpp
refresh_cpp/: Makefile  hash_map.cpp  learning_stringstream.cpp  linkedlists.cpp  lower_bound.cpp  removing_element_from_vector.cpp  vector_erase.cpp
strings/: change_to_lower.cpp  check_palindrome.cpp  check_palindrome_form_removing_one_character.cpp  check_subsequence.cpp  check_substring.cpp  convert_number_to_binary_string.cpp  convert_to_string.cpp  count_distinct_substrings.cpp  generate_all_substrings.cpp  hashing.cpp  longest_increasing_subsequence.cpp  rabin_karp.cpp
templates/: class_templates.cpp
z-cpp_questions/: for_loop_challene.cpp  number_guessing_game.cpp  reverse_array.cpp  two_sum_better_style.cpp  valid_parantheses.cpp
(+189 files in other folders)
