cmake_minimum_required(VERSION 3.14)
project(cppmaster)

set(CMAKE_CXX_STANDARD 17)

add_executable(fill_array refresh_cpp/vectors/vector_fill_style1.cpp)
add_executable(find_where_the_element refresh_cpp/vectors/vector_find_element.cpp)
add_executable(about_float refresh_cpp/general/about_float.cpp)
add_executable(about_double refresh_cpp/general/about_double.cpp)
add_executable(about_declr_initial refresh_cpp/general/about_declr_initial.cpp)
add_executable(about_taking_inputs refresh_cpp/general/about_taking_inputs.cpp)
add_executable(about_taking_inputs2 refresh_cpp/general/about_taking_inputs2.cpp)
add_executable(squareroot refresh_cpp/math/squareroot.cpp)
add_executable(powers refresh_cpp/math/powers.cpp)
add_executable(trigo refresh_cpp/math/trigo.cpp)
add_executable(about_quiz1 refresh_cpp/general/about_quiz1.cpp)
add_executable(about_ternary refresh_cpp/general/about_ternary.cpp)
add_executable(about_pointers refresh_cpp/pointers/about_pointers.cpp)
add_executable(about_call_by_reference refresh_cpp/pointers/about_call_by_reference.cpp)
add_executable(about_arrays refresh_cpp/arrays/about_arrays.cpp)
add_executable(about_pointer_implementation refresh_cpp/pointers/about_pointer_implementation.cpp)
add_executable(about_referencing_variables refresh_cpp/pointers/about_referencing_variables.cpp)
add_executable(about_pointers_to_arrays refresh_cpp/pointers/about_pointers_to_arrays.cpp)
add_executable(about_pointer_to_pointer refresh_cpp/pointers/about_pointer_to_pointer.cpp)
add_executable(about_pointer_to_a_function refresh_cpp/pointers/about_pointer_to_a_function.cpp)
add_executable(fibonacci refresh_cpp/math/fibonacci.cpp)
add_executable(about_classes refresh_cpp/oops/about_classes.cpp)
add_executable(about_class_member_functions refresh_cpp/oops/about_class_member_functions.cpp)
add_executable(about_constructors refresh_cpp/oops/about_constructors.cpp)
add_executable(about_inheritance refresh_cpp/oops/about_inheritance.cpp)
add_executable(about_polymorphism_virtual_functions refresh_cpp/oops/about_polymorphism_virtual_functions.cpp)
add_executable(sizeof_class refresh_cpp/oops/sizeof_class.cpp)
add_executable(find_the_output refresh_cpp/oops/find_the_output.cpp)
add_executable(find_the_output2 refresh_cpp/oops/find_the_output2.cpp)
add_executable(calculating_area refresh_cpp/oops/calculating_area.cpp)
add_executable(example_generic refresh_cpp/templates/example_generic.cpp)
add_executable(example_with_templates refresh_cpp/templates/example_with_templates.cpp)
add_executable(sets cpp_questions/sets.cpp)

add_executable(reverse_array cpp_questions/reverse_array.cpp)
add_executable(for_loop_challene cpp_questions/for_loop_challene.cpp)
add_executable(itertools_accumulate refresh_cpp/vectors/vector_itertools_accumulate.cpp)
add_executable(two_sum_better_style cpp_questions/two_sum_better_style.cpp)
add_executable(best_time_to_buy_sell_stock_1 cpp_questions/best_time_to_buy_sell_stock_1.cpp)
add_executable(remove_element refresh_cpp/vectors/vector_remove_element.cpp)
add_executable(vector_clear refresh_cpp/vectors/vector_clear.cpp)
add_executable(fill_vector_style2 refresh_cpp/vectors/vector_fill_style_2.cpp)
add_executable(raw_map refresh_cpp/hashmaps/raw_map.cpp)
add_executable(unordered_map refresh_cpp/hashmaps/unordered_map.cpp)
add_executable(check_if_key_exists refresh_cpp/hashmaps/check_if_key_exists.cpp)
add_executable(sort_unordered_map refresh_cpp/hashmaps/sort_unordered_map.cpp)
add_executable(sort_hashmap_by_value refresh_cpp/hashmaps/sort_hashmap_by_value.cpp)
add_executable(delete_from_hashmap refresh_cpp/hashmaps/delete_from_hashmap.cpp)
add_executable(merge_two_hashmap refresh_cpp/hashmaps/merge_two_hashmap.cpp)
add_executable(general_hacks refresh_cpp/general/getting_started.cpp)
add_executable(enumerate refresh_cpp/vectors/vector_enumerate.cpp)
add_executable(using_any_of refresh_cpp/lambdas/any_of.cpp)
add_executable(all_of refresh_cpp/lambdas/all_of.cpp)
add_executable(none_of refresh_cpp/lambdas/none_of.cpp)
add_executable(for_each_or_list_comprehension refresh_cpp/lambdas/for_each_or_list_comprehension.cpp)
add_executable(quick_print_vector refresh_cpp/vectors/vector_quick_print.cpp)
add_executable(vector_comprehension refresh_cpp/vectors/vector_comprehension.cpp)
add_executable(find_max_element refresh_cpp/vectors/vector_find_max_element.cpp)
add_executable(vector_find_first_item refresh_cpp/vectors/vector_find_first_item.cpp)
add_executable(string refresh_cpp/strings/string_splicing.cpp)
add_executable(learning_stringstream refresh_cpp/strings/string_split_stringstream.cpp)
add_executable(gcd_lcm refresh_cpp/math/gcd_lcm.cpp)
add_executable(check_prime refresh_cpp/math/check_prime.cpp)
add_executable(leap_year refresh_cpp/math/leap_year.cpp)
add_executable(binary_exponential refresh_cpp/math/binary_exponential.cpp)
add_executable(find_end refresh_cpp/strings/find_end.cpp)
add_executable(find_first_off refresh_cpp/strings/find_first_off.cpp)