cmake_minimum_required(VERSION 3.14)
project(cppmaster)

set(CMAKE_CXX_STANDARD 17)

add_executable(fill_array refresh_cpp/vectors/vector_fill_style1.cpp)
add_executable(find_where_the_element refresh_cpp/vectors/vector_find_element.cpp)
add_executable(about_float refresh_cpp/general/about_float.cpp)
add_executable(about_double refresh_cpp/general/about_double.cpp)
add_executable(about_declr_initial refresh_cpp/general/about_declr_initial.cpp)
add_executable(about_taking_inputs refresh_cpp/general/about_taking_inputs.cpp)
add_executable(about_taking_inputs2 refresh_cpp/general/about_taking_inputs2.cpp)
add_executable(squareroot refresh_cpp/math/squareroot.cpp)
add_executable(powers refresh_cpp/math/powers.cpp)
add_executable(trigo refresh_cpp/math/trigo.cpp)
add_executable(about_quiz1 refresh_cpp/general/about_quiz1.cpp)
add_executable(about_ternary refresh_cpp/general/about_ternary.cpp)
add_executable(about_pointers refresh_cpp/pointers/about_pointers.cpp)
add_executable(about_call_by_reference refresh_cpp/pointers/about_call_by_reference.cpp)
add_executable(about_arrays refresh_cpp/arrays/about_arrays.cpp)
add_executable(about_pointer_implementation refresh_cpp/pointers/about_pointer_implementation.cpp)
add_executable(about_referencing_variables refresh_cpp/pointers/about_referencing_variables.cpp)
add_executable(about_pointers_to_arrays refresh_cpp/pointers/about_pointers_to_arrays.cpp)
add_executable(about_pointer_to_pointer refresh_cpp/pointers/about_pointer_to_pointer.cpp)
add_executable(about_pointer_to_a_function refresh_cpp/pointers/about_pointer_to_a_function.cpp)
add_executable(fibonacci refresh_cpp/math/fibonacci.cpp)
add_executable(about_classes refresh_cpp/oops/about_classes.cpp)
add_executable(about_class_member_functions refresh_cpp/oops/about_class_member_functions.cpp)
add_executable(about_constructors refresh_cpp/oops/about_constructors.cpp)
add_executable(about_inheritance refresh_cpp/oops/about_inheritance.cpp)
add_executable(about_polymorphism_virtual_functions refresh_cpp/oops/about_polymorphism_virtual_functions.cpp)
add_executable(sizeof_class refresh_cpp/oops/sizeof_class.cpp)
add_executable(find_the_output refresh_cpp/oops/find_the_output.cpp)
add_executable(find_the_output2 refresh_cpp/oops/find_the_output2.cpp)
add_executable(calculating_area refresh_cpp/oops/calculating_area.cpp)
add_executable(example_generic refresh_cpp/templates/example_generic.cpp)
add_executable(example_with_templates refresh_cpp/templates/example_with_templates.cpp)
add_executable(sets cpp_questions/sets.cpp)

add_executable(reverse_array cpp_questions/reverse_array.cpp)
add_executable(for_loop_challene cpp_questions/for_loop_challene.cpp)
add_executable(itertools_accumulate refresh_cpp/vectors/vector_itertools_accumulate.cpp)
add_executable(two_sum_better_style cpp_questions/two_sum_better_style.cpp)
add_executable(best_time_to_buy_sell_stock_1 cpp_questions/best_time_to_buy_sell_stock_1.cpp)
add_executable(remove_element refresh_cpp/vectors/vector_remove_element.cpp)
add_executable(vector_clear refresh_cpp/vectors/vector_clear.cpp)
add_executable(fill_vector_style2 refresh_cpp/vectors/vector_fill_style_2.cpp)
add_executable(raw_map refresh_cpp/hashmaps/raw_map.cpp)
add_executable(unordered_map refresh_cpp/hashmaps/unordered_map.cpp)
add_executable(check_if_key_exists refresh_cpp/hashmaps/check_if_key_exists.cpp)
add_executable(sort_unordered_map refresh_cpp/hashmaps/sort_unordered_map.cpp)
add_executable(sort_hashmap_by_value refresh_cpp/hashmaps/sort_hashmap_by_value.cpp)
add_executable(delete_from_hashmap refresh_cpp/hashmaps/delete_from_hashmap.cpp)
add_executable(merge_two_hashmap refresh_cpp/hashmaps/merge_two_hashmap.cpp)
add_executable(general_hacks refresh_cpp/general/getting_started.cpp)
add_executable(enumerate refresh_cpp/vectors/vector_enumerate.cpp)
add_executable(using_any_of refresh_cpp/lambdas/any_of.cpp)
add_executable(all_of refresh_cpp/lambdas/all_of.cpp)
add_executable(none_of refresh_cpp/lambdas/none_of.cpp)
add_executable(for_each_or_list_comprehension refresh_cpp/lambdas/for_each_or_list_comprehension.cpp)
add_executable(quick_print_vector refresh_cpp/vectors/vector_quick_print.cpp)
add_executable(vector_comprehension refresh_cpp/vectors/vector_list_comprehension.cpp)
add_executable(find_max_element refresh_cpp/vectors/vector_find_max_element.cpp)
add_executable(vector_find_first_item refresh_cpp/vectors/vector_find_first_item.cpp)
add_executable(string refresh_cpp/strings/string_splicing.cpp)
add_executable(learning_stringstream refresh_cpp/strings/string_split_stringstream.cpp)
add_executable(gcd_lcm refresh_cpp/math/gcd_lcm.cpp)
add_executable(check_prime refresh_cpp/math/check_prime.cpp)
add_executable(leap_year refresh_cpp/math/leap_year.cpp)
add_executable(binary_exponential refresh_cpp/math/binary_exponential.cpp)
add_executable(find_end refresh_cpp/strings/string_find_end_occurrence.cpp)
add_executable(find_first_off refresh_cpp/strings/string_find_first_off_occurrence.cpp)
add_executable(string_adjacent_find refresh_cpp/strings/string_adjacent_find.cpp)
add_executable(string_count refresh_cpp/strings/string_count.cpp)
add_executable(vector_count refresh_cpp/vectors/vector_count_element.cpp)
add_executable(vector_count_on_condition refresh_cpp/vectors/vector_count_on_condition.cpp)
add_executable(count refresh_cpp/lambdas/count.cpp)
add_executable(vector_check_equal refresh_cpp/vectors/vector_is_equal.cpp)
add_executable(vector_check_permutation refresh_cpp/vectors/vector_is_permutation.cpp)
add_executable(string_check_permutation refresh_cpp/strings/string_check_permutation.cpp)
add_executable(vector_search_is_in_this refresh_cpp/vectors/vector_search_is_in_this.cpp)
add_executable(string_check_for_substring refresh_cpp/strings/string_check_for_substring.cpp)
add_executable(vector_replace_element refresh_cpp/vectors/vector_replace_element.cpp)
add_executable(string_replace_element refresh_cpp/strings/string_replace_element.cpp)
add_executable(swap_elements refresh_cpp/general/swap_elements.cpp)
add_executable(swap_ranges refresh_cpp/general/swap_ranges.cpp)
add_executable(vector_remove_duplicates refresh_cpp/vectors/vector_to_set.cpp)
add_executable(understanding_ternary refresh_cpp/general/understanding_ternary.cpp)
add_executable(vector_remove_element refresh_cpp/vectors/vector_remove_element.cpp)
add_executable(vector_erase refresh_cpp/vectors/vector_erase.cpp)
add_executable(min_max refresh_cpp/general/min_max.cpp)
add_executable(vector_next_permutation refresh_cpp/vectors/vector_next_permutation.cpp)
add_executable(vector_prev_permutation refresh_cpp/vectors/vector_prev_permutation.cpp)
add_executable(bfs refresh_cpp/bfs/bfs.cpp)
add_executable(class_templates refresh_cpp/templates/class_templates.cpp)