cmake_minimum_required(VERSION 3.14)
project(cppmaster)

set(CMAKE_CXX_STANDARD 17)

add_executable(fill_array cppfundae/vectors/vector_fill_style1.cpp)
add_executable(find_where_the_element cppfundae/vectors/vector_find_element.cpp)
add_executable(about_float cppfundae/general/about_float.cpp)
add_executable(about_double cppfundae/general/about_double.cpp)
add_executable(about_declr_initial cppfundae/general/about_declr_initial.cpp)
add_executable(about_taking_inputs cppfundae/general/about_taking_inputs.cpp)
add_executable(about_taking_inputs2 cppfundae/general/about_taking_inputs2.cpp)
add_executable(squareroot algorithms/math/squareroot.cpp)
add_executable(powers algorithms/math/powers.cpp)
add_executable(trigo algorithms/math/trigo.cpp)
add_executable(about_quiz1 cppfundae/general/about_quiz1.cpp)
add_executable(about_ternary cppfundae/general/about_ternary.cpp)
add_executable(about_pointers cppfundae/pointers/about_pointers.cpp)
add_executable(about_call_by_reference cppfundae/pointers/about_call_by_reference.cpp)
add_executable(about_arrays algorithms/arrays/about_arrays.cpp cppfundae/literals/literals.cpp)
add_executable(about_pointer_implementation cppfundae/pointers/about_pointer_implementation.cpp)
add_executable(about_referencing_variables cppfundae/pointers/about_referencing_variables.cpp)
add_executable(about_pointers_to_arrays cppfundae/pointers/about_pointers_to_arrays.cpp)
add_executable(about_pointer_to_pointer cppfundae/pointers/about_pointer_to_pointer.cpp)
add_executable(about_pointer_to_a_function cppfundae/pointers/about_pointer_to_a_function.cpp)
add_executable(fibonacci algorithms/math/fibonacci.cpp)
add_executable(about_classes cppfundae/oops/about_classes.cpp)
add_executable(about_class_member_functions cppfundae/oops/about_class_member_functions.cpp)
add_executable(about_constructors cppfundae/oops/about_constructors.cpp)
add_executable(about_inheritance cppfundae/oops/about_inheritance.cpp)
add_executable(about_polymorphism_virtual_functions cppfundae/oops/about_polymorphism_virtual_functions.cpp)
add_executable(sizeof_class cppfundae/oops/sizeof_class.cpp)
add_executable(find_the_output cppfundae/oops/find_the_output.cpp)
add_executable(find_the_output2 cppfundae/oops/find_the_output2.cpp)
add_executable(calculating_area cppfundae/oops/calculating_area.cpp)
add_executable(example_generic cppfundae/templates/example_generic.cpp)
add_executable(example_with_templates cppfundae/templates/example_with_templates.cpp)
add_executable(sets cpp_questions/sets.cpp)

add_executable(reverse_array cpp_questions/reverse_array.cpp)
add_executable(for_loop_challene cpp_questions/for_loop_challene.cpp)
add_executable(itertools_accumulate cppfundae/vectors/vector_itertools_accumulate.cpp)
add_executable(two_sum_better_style cpp_questions/two_sum_better_style.cpp)
add_executable(best_time_to_buy_sell_stock_1 cpp_questions/best_time_to_buy_sell_stock_1.cpp)
add_executable(remove_element cppfundae/vectors/vector_remove_element.cpp)
add_executable(vector_clear cppfundae/vectors/vector_clear.cpp)
add_executable(fill_vector_style2 cppfundae/vectors/vector_fill_style_2.cpp)
add_executable(raw_map datastructures/hashmaps/raw_map.cpp)
add_executable(unordered_map datastructures/hashmaps/unordered_map.cpp)
add_executable(check_if_key_exists datastructures/hashmaps/check_if_key_exists.cpp)
add_executable(sort_unordered_map datastructures/hashmaps/sort_unordered_map.cpp)
add_executable(sort_hashmap_by_value datastructures/hashmaps/sort_hashmap_by_value.cpp)
add_executable(delete_from_hashmap datastructures/hashmaps/delete_from_hashmap.cpp)
add_executable(merge_two_hashmap datastructures/hashmaps/merge_two_hashmap.cpp)
add_executable(general_hacks cppfundae/general/getting_started.cpp)
add_executable(enumerate cppfundae/vectors/vector_enumerate.cpp)
add_executable(using_any_of cppfundae/lambdas/any_of.cpp)
add_executable(all_of cppfundae/lambdas/all_of.cpp)
add_executable(none_of cppfundae/lambdas/none_of.cpp)
add_executable(for_each_or_list_comprehension cppfundae/lambdas/for_each_or_list_comprehension.cpp)
add_executable(quick_print_vector cppfundae/vectors/vector_quick_print.cpp)
add_executable(vector_comprehension cppfundae/vectors/vector_list_comprehension.cpp)
add_executable(find_max_element cppfundae/vectors/vector_find_max_element.cpp)
add_executable(vector_find_first_item cppfundae/vectors/vector_find_first_item.cpp)
add_executable(string cppfundae/strings/string_splicing.cpp)
add_executable(learning_stringstream cppfundae/strings/string_split_stringstream.cpp)
add_executable(gcd_lcm algorithms/math/gcd_lcm.cpp)
add_executable(check_prime algorithms/math/check_prime.cpp)
add_executable(leap_year algorithms/math/leap_year.cpp)
add_executable(binary_exponential algorithms/math/binary_exponential.cpp)
add_executable(find_end cppfundae/strings/string_find_end_occurrence.cpp)
add_executable(find_first_off cppfundae/strings/string_find_first_off_occurrence.cpp)
add_executable(string_adjacent_find cppfundae/strings/string_adjacent_find.cpp)
add_executable(string_count cppfundae/strings/string_count.cpp)
add_executable(vector_count cppfundae/vectors/vector_count_element.cpp)
add_executable(vector_count_on_condition cppfundae/vectors/vector_count_on_condition.cpp)
add_executable(count cppfundae/lambdas/count.cpp)
add_executable(vector_check_equal cppfundae/vectors/vector_is_equal.cpp)
add_executable(vector_check_permutation cppfundae/vectors/vector_is_permutation.cpp)
add_executable(string_check_permutation cppfundae/strings/string_check_permutation.cpp)
add_executable(vector_search_is_in_this cppfundae/vectors/vector_search_is_in_this.cpp)
add_executable(string_check_for_substring cppfundae/strings/string_check_for_substring.cpp)
add_executable(vector_replace_element cppfundae/vectors/vector_replace_element.cpp)
add_executable(string_replace_element cppfundae/strings/string_replace_element.cpp)
add_executable(swap_elements cppfundae/general/swap_elements.cpp)
add_executable(swap_ranges cppfundae/general/swap_ranges.cpp)
add_executable(vector_remove_duplicates cppfundae/vectors/vector_to_set.cpp)
add_executable(understanding_ternary cppfundae/general/understanding_ternary.cpp)
add_executable(vector_remove_element cppfundae/vectors/vector_remove_element.cpp)
add_executable(vector_erase cppfundae/vectors/vector_erase.cpp)
add_executable(min_max cppfundae/general/min_max.cpp)
add_executable(vector_next_permutation cppfundae/vectors/vector_next_permutation.cpp)
add_executable(vector_prev_permutation cppfundae/vectors/vector_prev_permutation.cpp)
add_executable(bfs algorithms/bfs/bfs.cpp)
add_executable(class_templates cppfundae/templates/class_templates.cpp)
add_executable(find_max_in_array_using_templates cppfundae/templates/find_max_in_array_using_templates.cpp)
add_executable(general_class_example cppfundae/oops/general_class_example.cpp)
add_executable(string_equality cpp_questions/1451C-string_equality.cpp)
add_executable(literals cppfundae/literals/literals.cpp)
add_executable(enumClassic cppfundae/types/enumClassic.cpp)
add_executable(explicitCast cppfundae/casts/explicit_cast.cpp)
add_executable(userDefinedLiterals cppfundae/literals/user_defined_literals.cpp)